[package]
name = "ramp_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.1"
regex = "1.11.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"

[target.aarch64-apple-darwin]
linker = "aarch64-apple-darwin24.0.0-clang"
