[package]
name = "ramp_gui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
pelican_ui = "1.1.19"
pelican_ui_std = "0.2.8"
image = "0.25.1"
regex = "1.11.1"

[build-dependencies]
embed-resource = "3.0.2"

[lib]
name="main"
crate-type=["staticlib", "cdylib", "rlib"]

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"

[target.aarch64-apple-darwin]
linker = "aarch64-apple-darwin24.0.0-clang"

[package.metadata.deb]
maintainer-scripts = "debian/"